# soil-identification

./: .gitignore  README.md  index.py  pyproject.toml  streamlit_app.py
src/: index.py  streamlit_app.py
src/static/: dataset.xlsx
