[project]
name = "soil-identification"
version = "0.1.0"
description = ""
authors = [
    {name = "mayurkas",email = "mayurkas@amdocs.com"}
]
package-mode = false

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
